--- a/_includes/head.html
+++ b/_includes/head.html
@@ -157,5 +157,8 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-
+  
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% include analytics.html %}
+  {% endif %}
 </head>
